--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,18 @@
-img{
-    height:300px
+body{
+    background-color: gray;
+}
+.nav-dropdown{
+    display:inline-block
+}
+.navbar-brand{
+    color:white;
+}
+header{
+    background-color:black;
+}
+.navbar navbar-expand-lg bg-body-tertiary{
+    background-color:black;
+}
+button{
+    color:rgb(147, 59, 229)
 }
