--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body{
 }
 #search-button{
     border-color:white;
-    color:white;
+    color:black;
 }
 .dropdown-menu{
     padding: 10px 10px;
