Se agreguearon 2 nuevas clases al elemento header y nav(.inamovible), y al section (.content)

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body{
 }
 #search-button{
     border-color:white;
-    color:black;
+    color:white;
 }
 .dropdown-menu{
     padding: 10px 10px;
@@ -36,3 +36,8 @@ body{
 footer{
     clear:both
 }
+.content{
+    display:block
+}
+.inamovible nav{
+}    
